<resources>
    <string name="app_name">Hista</string>

    <string name="app_name_location">Hista Location</string>

    <!--    Activity Name-->
    <string name="find_friend_activity">Find Friends</string>

    <!--    @menu/top_app_bar-->
    <string name="favorite">Favorite</string>
    <string name="description_favorite">Description Favorite</string>
    <string name="more">More</string>
    <string name="description_more">Description More</string>
    <string name="search">Search</string>
    <string name="description_search">Description Search</string>

    <!--    Default Text-->
    <string name="default_name">User name</string>
    <string name="default_status">User status</string>
    <string name="last_seen">Last seen</string>

    <!--    Hint-->
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="write_sth">Write something...</string>
    <string name="write_msg">Type message here...</string>
    <string name="phone_hint">Phone number</string>
    <string name="verification">Input number</string>


    <!--    Profile Strings-->
    <string name="my_profile">My Profile</string>
    <string name="message">Message</string>
    <string name="request">Request</string>
    <string name="setting">Setting</string>

    <!--    Buttons-->
    <string name="register_new_acc">Register new account</string>
    <string name="login">Login</string>
    <string name="phone">Phone</string>
    <string name="register">Create new account</string>
    <string name="update_profile">Update</string>
    <string name="send_code">Send verification code</string>
    <string name="verify_code">Verify</string>
    <string name="send_message">Send Message</string>
    <string name="cancel_request">Cancel Request</string>


    <!--    menu-->
    <string name="find_fri_menu">Find Friends</string>
    <string name="create_group_menu">Create Group</string>
    <string name="setting_menu">Setting</string>
    <string name="logout_menu">Logout</string>
    <string name="profile_menu">Profile</string>

    <!--    Description-->
    <string name="send_btn_des">Send Button</string>

    <!--    Normal text-->
    <string name="forget_password">Forget Password ?</string>
    <string name="login_with">or login with</string>
    <string name="already_has_acc">Already have an account?</string>
    <string name="profile_status">Profile Status</string>

    <string name="google_map_api_key">AIzaSyC7nRzsi-mdqgOy7AaUlgaifeGc2VrFsd8</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
