<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center">

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:drawableRight="@drawable/ic_email_white_50dp"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorAccent"
        android:textColorHint="@color/colorAccent"
        android:drawableRight="@drawable/ic_lock_white_50dp"/>

    <TextView
        android:id="@+id/forget_password_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="15dp"
        android:layout_marginRight="10dp"
        android:text="@string/forget_password"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textSize="24sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent" />

    <TextView
        android:id="@+id/register_new_acc_link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/register_new_acc"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"/>


    <TextView
        android:id="@+id/login_with"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/login_with"
        android:textColor="@color/colorAccent"
        />

    <Button
        android:id="@+id/login_phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:text="@string/phone"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textColor="@color/colorPrimary"
        android:background="@color/colorAccent"/>

</LinearLayout>